[tool.poetry]
name = "goorhm"
version = "0.1.0"
description = "cloud things"
authors = ["nimoes, mmattleee"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.7"

[tool.poetry.dev-dependencies]
botocore = "^1.24.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
